# k8le

./: .gitignore  README.md  docker-compose.yml  nginx.t  package-lock.json  package.json
be-fastpy/: .gitignore  Dockerfile  README.md  build_and_push.sh  main.py  models.py  run.sh
be-nestjs/: Dockerfile  html2json.js  package.json  pnpm-lock.yaml
be-nestjs/src/: app.module.ts  main.ts
fe-mng/: .umirc.ts  Dockerfile  build_push.sh  package.json  pnpm-lock.yaml  run_docker.sh  temp.nginx.conf
fe-mng/config/: index.ts  proxy.ts  theme.ts
fe-mng/mock/: userAPI.ts
fe-mng/src/: app.tsx  rootWrapper.tsx
go-manual/: go.mod  go.sum  main.go
nextjs-app/: Dockerfile  Dockerfile.dev  README.md  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
nextjs-app/app/: app-provider.tsx  globals.css  layout.tsx  page.tsx
nextjs-app/config/: supabase.ts
nextjs-app/supabase/: config.toml
nextjs-app/types/: helper.ts  product.ts
rspack-react19-tw4/: README.md  package.json  pnpm-lock.yaml  tailwind.config.mjs
rspack-react19-tw4/src/: App.css
uv-py/: README.md  hotnews.md  main.py  pyproject.toml  speech2text.py  weather.py
uv-py-rag/: README.md  doc.md  main.ipynb  pyproject.toml
uv-py-rag/.ipynb_checkpoints/: main-checkpoint.ipynb
uv-py/assets/backgrounds/: README.md
uv-py/gui/: __init__.py  main_window.py  virtual_keyboard.py
uv-py/scripts/: hello.py
vite-react-swc-tw4/: .cta.json  .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml
vite-react-swc-tw4/src/: routeTree.gen.ts
wasm/asc-manual-demo/: README.md  (+3 more)
(+50 files in other folders)
