[project]
name = "uv-py"
version = "0.1.0"
description = "PC端语音转文字GUI应用"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.3",
    "rich>=14.0.0",
    "PyQt6>=6.6.0",
    "SpeechRecognition>=3.10.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "pyaudio>=0.2.11",
]

[project.scripts]
speech2text = "main:main"
